mods to checkboxes

--- a/01-dom-events/index_04.html
+++ b/01-dom-events/index_04.html
@@ -31,6 +31,10 @@
         let y = document.getElementById("div")
         let z = document.getElementById("section")
 
+        // x.addEventListener("click", XRespondClick, true);
+        // y.addEventListener("click", YRespondClick, true);
+        // z.addEventListener("click", ZRespondClick, true);
+
         x.addEventListener("click", XRespondClick);
         y.addEventListener("click", YRespondClick);
         z.addEventListener("click", ZRespondClick);
